[package]
name = "prism-ct-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
futures = "0.3"

# Prism dependencies
prism-prover = { git = "https://github.com/deltadevsde/prism", branch = "main" }
prism-common = { git = "https://github.com/deltadevsde/prism", branch = "main" }
prism-tree = { git = "https://github.com/deltadevsde/prism", branch = "main" }
prism-keys = { git = "https://github.com/deltadevsde/prism", branch = "main" }
prism-da = { git = "https://github.com/deltadevsde/prism", branch = "main" }
prism-storage = { git = "https://github.com/deltadevsde/prism", branch = "main" }
keystore-rs = "0.3"
